<resources>
    <string name="new_user">Log in</string>
    <string name="log_in">Log in</string>
    <string name="fore_name">Fore Name</string>
    <string name="last_name">Last Name</string>
    <string name="webuntis_password">Webuntis Password</string>
    <string name="encryption_warning">Passwords are not encrypted, your account may be compromised! Do not use this app as a teacher! Your Webuntis Password should not be used on any other platform!</string>
    <string name="webuntis_username">Webuntis Username</string>
    <string name="fore_name_empty">Fore Name may not be Empty!</string>
    <string name="last_name_empty">Last Name may not be Empty!</string>
    <string name="webuntis_url_empty">School Name may not be empty</string>
    <string name="username_empty">Username may not be Empty!</string>
    <string name="password_empty">Password may not be Empty!</string>
    <string name="invalid_url_format">Invalid URL format!</string>
    <string name="invalid_number">Please only enter valid numbers</string>
    <string name="app_name">Untis Alarm</string>
    <string name="invalid_login_data">Invalid Login Data!</string>
    <string name="please_only_enter_integers">Please only enter Integers</string>
    <string name="not_loaded">not loaded</string>
    <string name="update">Update</string>
    <string name="label_got_it">Got it!</string>
    <string name="time_before_school">Time Before School</string>
    <string name="you_are_offline">You are Offline!</string>
    <string name="foregroundService_notification">required for UntisAlarm to set and Update your Alarms</string>
    <string name="webuntis_url">School name or Address</string>
    <string name="select_school">Select School</string>
    <string name="no_id_found">There is no ID for your Account, this should not happen, please send a bug report.</string>
    <string name="short_minute">min</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss_alarm">Dismiss</string>
    <string name="upcoming_alarm">Upcoming Alarm</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="no_alarm_tomorrow">No Alarm Tomorrow</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="set_time_before_school">Set time before School</string>
    <string name="vibrate">Vibrate</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="increase_volume_gradually">Increase Volume Gradually</string>
    <string name="default_alarm">Default Alarm</string>
    <string name="general_settings">General Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="currently">Currently</string>
    <string name="default_current_tbs">The Alarm currently goes off 60 minutes before your first lesson. Edit this in the Settings menu.</string>
    <string name="error_loading_tbs">Please set the Time before School in the settings menu.</string>
    <string name="the_alarm_currently_goes_off">"The Alarm currently goes off "</string>
    <string name="minutes_n_before_your_first_lesson">" minutes before your first lesson."</string>
    <string name="button_to_change_tomorrows_alarm">Button to change tomorrows alarm.</string>
    <string name="webuntis_settings">Webuntis Settings</string>
    <string name="cancellation_text">Cancellation Text</string>
    <string name="cancelled_message_explanation">Some Schools do not display cancelled messages as cancelled, instead they set a Message like \"Lesson is cancelled\" or \"Do assinged Tasks\". If this is the case for you, enter the shown Message, so that these lessons will also be registered as cancelled.</string>
    <string name="error">ERROR</string>
    <string name="not_logged_in">Not Logged in</string>
    <string name="you_are_currently_not_logged_in_please_login_again">You are currently not logged in, please login again.</string>
    <string name="login">Login</string>
    <string name="alarm_clock_notifications">Alarm Clock Notifications</string>
    <string name="time_before_school_hint">Time Before School</string>
    <string name="loading">Loading…</string>
    <string name="no_file_was_selected">No file was selected.</string>
    <string name="your_alarms_might_not_be_set_properly_please_make_sure_that_they_are">Your Alarms might not be set properly. Please make sure that they are.</string>
    <string name="alarm_notifications_channel_name">Alarm Notifications</string>
    <string name="info_notifications_channel_name">Info Notifications</string>
    <string name="enable_notifications">You first need to enable notifications.</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="no_success">No success</string>
    <string name="warning_notifications_are_not_enabled_please_enable_them_for_the_app_to_work_properly">Warning: Notifications are not enabled, please enable them for the App to work properly.</string>
    <string name="silent">Silent</string>
    <string name="may_not_be_empty">May not be empty</string>
    <string name="school_must_be_selected">School must be selected</string>
    <string name="unable_to_load_address">Unable to load Address</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="skip">Skip</string>
    <string name="set_how_much_time_you_need_before_school_starts">Set how much time you need before School starts.</string>
    <string name="selector">Selector</string>
    <string name="globe">Language</string>
    <string name="choose_alarm_sound">Choose Alarm Sound</string>
    <string name="select_language">Select Language</string>
    <string name="change_app_theme">Change Dark Mode</string>
    <string name="you_have_no_internet_connection">You have no internet connection!</string>
    <string name="bell">Alarm Sound</string>
    <string name="moon">Dark Mode</string>
    <string name="dismiss">Dismiss</string>
    <string name="swipe_right_to_dismiss">Swipe right to dismiss</string>
    <string name="close_view">Close View</string>
    <string name="draggable_selector">Draggable Selector</string>
    <string name="good_morning">Good Morning!</string>
    <string name="error_when_searching_for_schools">Error when searching for schools!</string>
    <string name="no_school_found">No school found</string>
    <string name="too_many_results">Too many results</string>
    <string name="select_alarm_sound">Select Alarm Sound</string>
    <string name="system_default">System Default</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="time_format">Time Format</string>
    <string name="select_time_format">Select Time Format</string>
    <string name="_12_hours">12 Hours</string>
    <string name="_24_hours">24 Hours</string>
    <string name="selected_date_and_time_is_before_the_current_time">Selected date and time is before the current time</string>
    <string name="alarms_are_disabled">Alarms are disabled</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>