<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/edit_alarm_tomorrow"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:contentDescription="@string/button_to_change_tomorrows_alarm"
                app:layout_constraintBottom_toTopOf="@+id/current_tbs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/alarmPreview"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_notification" />

            <TextView
                android:id="@+id/alarmPreview"
                style="@style/alarm_clock_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                app:layout_constraintBottom_toTopOf="@+id/current_tbs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_tbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="15"
                android:singleLine="false"
                android:text="@string/default_current_tbs"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/toggleAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>